frontend/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: react-frontend-service
spec:
  selector:
    app: react-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
