frontend/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-external-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: minikube.info
  - http:
      paths:
      - path: /
        backend:
          serviceName: react-frontend-service
          servicePort: 443
